--- a/Rapport.tex
+++ b/Rapport.tex
@@ -37,8 +37,10 @@
 	
 	Nous avons eu pas mal de difficultés au début du projet lorsque nous avons du visualiser la tâche et donner une structure. Il n'a pas été facile de s'y retrouver entre tous les différents types utilisés, leur construction, ce pour quoi ils était utilisés... Aussi, la manière de traiter les cas de transformations pour \texttt{Interprete} et de filtres dans \texttt{Mix} n'a pas été instinctive.
 	
-\section{Constructions déclaratives}
+\section{Constructions non-déclaratives}
+Nous n'avons utilisé aucune construction non-déclarative. Nous avons trouvé que l'usage des cellules était superflu et que l'usage d'objets était quant à lui franchement inutile. Ce que l'usage des cellules aurait éventuellement pu nous apporter, c'est un code peut-être plus succinct et une facilité dans la programmation, mais cela ne veut pas dire que notre code aurait été plus rapide pour autant!
 
+\section{Complexité des fonctions}
 
 
 \end{document}
