--- a/Rapport.tex
+++ b/Rapport.tex
@@ -41,6 +41,6 @@
 Nous n'avons utilisé aucune construction non-déclarative. Nous avons trouvé que l'usage des cellules était superflu et que l'usage d'objets était quant à lui franchement inutile. Ce que l'usage des cellules aurait éventuellement pu nous apporter, c'est un code peut-être plus succinct et une facilité dans la programmation, mais cela ne veut pas dire que notre code aurait été plus rapide pour autant!
 
 \section{Complexité des fonctions}
-
+La complexité de nos fonctions est pour \texttt{Mix} et pour \texttt{Interprete} de O(n), en effet il y a chaque fois n opérations sur des listes de tailles n. 
 
 \end{document}
